First commit; project mostly done

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,10 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  fun:        #30B5CC,
+  mellow:     #00e600,
+  royal:      #3333ff
 );
 
 
